--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<% include ../partials/head %>
+	<% include ../partials/head%>
 </head>
 <body class="container">
 
-	<header>
+	<!-- <header>
 		<% include ../partials/header %>
-	</header>
+	</header> -->
 
 	<main>
 		<div class="jumbotron">
-			<h1>This is great</h1>
-			<p>Welcome to templating using EJS</p>
+
+			<div class="container">
+			<div class="row">
+				<% results.forEach(function(job) { %>
+					
+					<div class="col-sm">
+							<div class="card" style="width: 18rem;">							
+									<div class="card-body">
+										<h5 class="card-title"><%= job.job_title%></h5>
+										<p class="card-text"><%= job.location%></p>
+										<a href="#" class="btn btn-primary">More Details</a>
+									</div>
+							</div>
+					</div>
+				<% }); %>
+
+			</div>
+			</div>
 		</div>
 	</main>
 
