--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,14 +1,27 @@
 <nav class="navbar navbar-default" role="navigation">
 	<div class="container-fluid">
 
-		<div class="navbar-header">
+		<!-- <div class="navbar-header">
 			<a class="navbar-brand" href="#">Brand</a>
 		</div>
 
 		<ul class="nav navbar-nav">
 			<li><a href="/">Home</a></li>
 			<li><a href="/about">About</a></li>
+		</ul> -->
+		<ul class="nav justify-content-center">
+				<li class="nav-item">
+				  <a class="nav-link active" href="#">Your Info</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="#">More</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="#">Sign In</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="#">New User</a>
+				</li>
 		</ul>
-	  
 	</div>
 </nav>
