--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -31,7 +31,7 @@
 	</header>
 
 	<div style='position:absolute; right:2%; top:7% '>
-	<form action="/<%=id%>">
+	<form action="/">
 		<div class="form-group" style='display:inline-block; width:30% ' >
 			<input type="text" class="form-control" id="InputLocation" name ='InputLocation' aria-describedby="emailHelp" placeholder="Location">
 		</div>
