--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -16,14 +16,17 @@
 						<li class="nav-item">
 							<a class="nav-link active" href="#">Applied</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link active" href="http://localhost:3003/logout">logout</a>
+						</li>
 					<% }; %>
 
 					<% if(id == null ){ %>	
 					<li class="nav-item">
-					  <a class="nav-link" href="#">Sign In</a>
+					  <a class="nav-link" href="http://localhost:3003/login">Sign In</a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link" href="#">New User</a>
+					  <a class="nav-link" href="http://localhost:3003/login">New User</a>
 					</li>
 					<% }; %>
 			</ul>
