--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -69,7 +69,7 @@
 			<input type="text" class="form-control" id="title" name ='title' placeholder="Job Title">
 		</div>
 		<div class="form-group" >
-			<input type="text" class="form-control" id="description" name = 'description' placeholder="Title">
+			<input type="text" class="form-control" id="description" name = 'description' placeholder="Description">
 		</div>
 		<div class="form-group" >
 			<input type="text" class="form-control" id="location" name = 'location' placeholder="Location">
@@ -82,11 +82,11 @@
 	</footer>
 
 <!-- <script type="application/javascript" src='../partials/logoutTimer.js'></script> -->
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 	<% if(id != null){ %>	
 		<% include ../partials/logoutTimer.js %>
 	<% }; %>
-</script>
+</script> -->
 
 
 </body>
