--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,7 +8,14 @@
 	<header>
 		<div class="container-fluid" >
 			<ul class="nav ">
-				<% if(id != null){ %>	
+				<% if(user_type  == null ){ %>	
+					<li class="nav-item">
+						<a class="nav-link" href="http://localhost:3003/login">Sign In</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="http://localhost:3003/login">New User</a>
+					</li>
+				<% } else if(user_type === 'employer'){ %>	
 					<li class="nav-item">
 						<a class="nav-link active" href="#">Your Info</a>
 					</li>
@@ -18,64 +25,71 @@
 					<li class="nav-item">
 						<a class="nav-link active" href="http://localhost:3003/logout">logout</a>
 					</li>
-				<% }; %>
+				<% }else{ %>
+					<li class="nav-item">
+						<a class="nav-link active" href="#">Your Info</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active" href="#">Post Jobs</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active" href="http://localhost:3003/logout">logout</a>
+					</li>
 
-				<% if(id == null ){ %>	
-				<li class="nav-item">
-					<a class="nav-link" href="http://localhost:3003/login">Sign In</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="http://localhost:3003/login">New User</a>
-				</li>
-				<% }; %>
+				<%};%>
 			</ul>
 		</div>
 	</header>
 
-	<div style='position:absolute; right:2%; top:7% '>
-	<form action="/">
-		<div class="form-group" style='display:inline-block; width:30% ' >
-			<input type="text" class="form-control" id="InputLocation" name ='InputLocation' aria-describedby="emailHelp" placeholder="Location">
+
+
+	<% if(user_type === 'employer'){ %>	
+		<form action="/postjob" method='post'>
+			<div>Submit A new Job</div>
+			<div class="form-group" >
+				<input type="text" class="form-control" id="title" name ='title' placeholder="Job Title">
+			</div>
+			<div class="form-group" >
+				<input type="text" class="form-control" id="description" name = 'description' placeholder="Description">
+			</div>
+			<div class="form-group" >
+				<input type="text" class="form-control" id="location" name = 'location' placeholder="Location">
+			</div>
+			<button type="submit" class="btn btn-primary btn-sm">Submit</button>
+		</form>
+		<% } else{ %>  
+		<div style='position:absolute; right:2%; top:7% '>
+			<form action="/">
+				<div class="form-group" style='display:inline-block; width:30% ' >
+					<input type="text" class="form-control" id="InputLocation" name ='InputLocation' aria-describedby="emailHelp" placeholder="Location">
+				</div>
+				<div class="form-group" style='display:inline-block; width:30% '>
+					<input type="text" class="form-control" id="InputTitle" name = 'InputTitle' placeholder="Title">
+				</div>
+				<button type="submit" class="btn btn-primary btn-sm">Search</button>
+			</form>
 		</div>
-		<div class="form-group" style='display:inline-block; width:30% '>
-			<input type="text" class="form-control" id="InputTitle" name = 'InputTitle' placeholder="Title">
-		</div>
-		<button type="submit" class="btn btn-primary btn-sm">Search</button>
-	</form>
-	</div>
-	<main>
-		<div class="jumbotron">
-			<div class="container">
-			<div class="row">
-				<% results.forEach(function(job) { %>				
-					<div class="col-sm">
-						<div class="card" style="width: 18rem;">							
-							<div class="card-body">
-								<h5 class="card-title"><%= job.job_title%></h5>
-								<p class="card-text"><%= job.location%></p>
-								<a href="/" class="btn btn-primary">More Details</a>
+		<main>
+			<div class="jumbotron">
+				<div class="container">
+				<div class="row">
+					<% results.forEach(function(job) { %>				
+						<div class="col-sm">
+							<div class="card" style="width: 18rem;">							
+								<div class="card-body">
+									<h5 class="card-title"><%= job.job_title%></h5>
+									<p class="card-text"><%= job.location%></p>
+									<a href="/" class="btn btn-primary">More Details</a>
+								</div>
 							</div>
 						</div>
-					</div>
-				<% }); %>
-
+					<% }); %>
+	
+				</div>
+				</div>
 			</div>
-			</div>
-		</div>
-	</main>
-	<form action="/postjob" method='post'>
-		<div>Submit A new Job</div>
-		<div class="form-group" >
-			<input type="text" class="form-control" id="title" name ='title' placeholder="Job Title">
-		</div>
-		<div class="form-group" >
-			<input type="text" class="form-control" id="description" name = 'description' placeholder="Description">
-		</div>
-		<div class="form-group" >
-			<input type="text" class="form-control" id="location" name = 'location' placeholder="Location">
-		</div>
-		<button type="submit" class="btn btn-primary btn-sm">Submit</button>
-	</form>
+		</main>
+	<%};%>
 
 	<footer>
 		<% include ../partials/footer %>
@@ -83,7 +97,7 @@
 
 <!-- <script type="application/javascript" src='../partials/logoutTimer.js'></script> -->
 <!-- <script type="text/javascript">
-	<% if(id != null){ %>	
+	<% if(user_type  != null){ %>	
 		<% include ../partials/logoutTimer.js %>
 	<% }; %>
 </script> -->
