update profile pages

--- a/views/pages/business_profile.ejs
+++ b/views/pages/business_profile.ejs
@@ -11,63 +11,55 @@
                   <a class="nav-link js-scroll-trigger" href="http://localhost:3003">Main Page</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#personal">Personal</a>
+                <a class="nav-link js-scroll-trigger" href="#contact">Contact Info</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#Qualification">Qualification</a>
+                <a class="nav-link js-scroll-trigger" href="#business">Business</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#follow">Follow</a>
+                <a class="nav-link js-scroll-trigger" href="#jobs">Job Posted</a>
               </li>
             </ul>
           </div>
         </nav>
       
         <div class="container">
-          <section class="resume-section p-lg-5" id="personal">
+          <section class="resume-section p-lg-5" id="contact">
             <div class="w-100">
-              <h2 class="mb-3">Average Joe</h2>
+              <h2 class="mb-3">New York Computer</h2>
               <div class="lead mb-5">
                 <h3>Contact:</h3>
                   <label>Email: </label>
-                  <a href="#">name@email.com</a><br>
+                  <a href="#">nyccomputer@email.com</a><br>
                   <label>Phone: </label>
-                  <text>123-456-7890</text><br>
+                  <text>023-456-7890</text><br>
               </div>
             </div>
           </section>
       
           <hr class="m-0">
       
-          <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="Qualification">
+          <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="business">
             <div class="w-100">
-                      <div>
-                          <h2>Education</h2>
-                          <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-                              <div class="resume-content">
-                                  <p class="lead">City College of New York</p>
-                              </div>
-                          </div>
-              </div>
-              <div>
-                <h2 class="">Experience</h2>
-                <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
-                  <div class="resume-content">
-                    <p class="lead">Senior Web Developer</p>				
-                  </div>
-                </div>
+                <div>
+                    <h2>Business</h2>
+                    <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="resume-content">
+                            <p class="lead">Computer programming business</p>
+                        </div>
+                    </div>
               </div>
             </div>
           </section>
       
           <hr class="m-0">
       
-          <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="follow">
+          <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="jobs">
             <div class="w-100">
-              <h2 class="mb-5">Follow</h2>
+              <h2 class="mb-5">Job Posted</h2>
       
               <div class="">
-                            <a href='#' class="lead">Test Employer</a><br>
+                            <a href='#' class="lead">Test Job</a><br>
               </div>
       
             </div>
