--- a/views/pages/personal_profile.ejs
+++ b/views/pages/personal_profile.ejs
@@ -26,13 +26,13 @@
     <div class="container">
       <section class="resume-section p-lg-5" id="personal">
         <div class="w-100">
-          <h2 class="mb-3">Average Joe</h2>
+          <h2 class="mb-3"><%= user.username %></h2>
           <div class="lead mb-5">
             <h3>Contact:</h3>
               <label>Email: </label>
-              <a href="#">name@email.com</a><br>
+              <a href="#"><%= user.email %></a><br>
               <label>Phone: </label>
-              <text>123-456-7890</text><br>
+              <text><%= user.phone_number %></text><br>
           </div>
         </div>
       </section>
@@ -45,7 +45,7 @@
 					  <h2>Education</h2>
 					  <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
 						  <div class="resume-content">
-							  <p class="lead">City College of New York</p>
+							  <p class="lead"><%= user.education %></p>
 						  </div>
 					  </div>
           </div>
@@ -53,7 +53,7 @@
             <h2 class="">Experience</h2>
             <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
               <div class="resume-content">
-                <p class="lead">Senior Web Developer</p>				
+                <p class="lead"><%= user.experience %></p>				
               </div>
             </div>
           </div>
@@ -67,7 +67,9 @@
           <h2 class="mb-5">Follow</h2>
   
           <div class="">
-						<a href='#' class="lead">Test Employer</a><br>
+            <% follow.forEach(function(item) { %>
+              <a href='/business/<%= item.followed_ID%>' class="lead"><%= item.username %></a><br>
+            <% }); %>
           </div>
   
         </div>
