added follow feature

--- a/views/pages/job_des.ejs
+++ b/views/pages/job_des.ejs
@@ -20,6 +20,9 @@
     <form action="/apply/<%= info.job_ID%>" method='POST'>
         <button>Apply</button>
     </form>
+    <form action="/follow/<%= info.poster_ID%>" method='POST'>
+        <button>Follow</button>
+    </form>
 <% } %>
 
 </div> 
