--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,9 +19,9 @@
 					<li class="nav-item">
 						<a class="nav-link active" href="http://localhost:3003/business/<%= user_id%>">Your Info</a>
 					</li>
-					<li class="nav-item">
+					<!-- <li class="nav-item">
 						<a class="nav-link active" href="#">Applied</a>
-					</li>
+					</li> -->
 					<li class="nav-item">
 						<a class="nav-link active" href="http://localhost:3003/logout">logout</a>
 					</li>
@@ -29,9 +29,11 @@
 					<li class="nav-item">
 						<a class="nav-link active" href="http://localhost:3003/personal/<%= user_id%>">Your Info</a>
 					</li>
+					<% if(user_type != 'employee'){ %>
 					<li class="nav-item">
 						<a class="nav-link active" href="#">Post Jobs</a>
 					</li>
+				<%} %>
 					<li class="nav-item">
 						<a class="nav-link active" href="http://localhost:3003/logout">logout</a>
 					</li>
