--- a/views/pages/personal_profile.ejs
+++ b/views/pages/personal_profile.ejs
@@ -1,82 +1,80 @@
 <head>
-	<% include ../partials/style%>
+  <% include ../partials/style%>
 </head>
 
 <body id="page-top">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="">
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="http://localhost:3003">Main Page</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#personal">Personal</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#Qualification">Qualification</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#follow">Follow</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  
-    <div class="container">
-      <section class="resume-section p-lg-5" id="personal">
-        <div class="w-100">
-          <h2 class="mb-3"><%= user.username %></h2>
-          <div class="lead mb-5">
-            <h3>Contact:</h3>
-              <label>Email: </label>
-              <a href="#"><%= user.email %></a><br>
-              <label>Phone: </label>
-              <text><%= user.phone_number %></text><br>
-          </div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="http://localhost:3003">Main Page</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#personal">Personal</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#Qualification">Qualification</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#follow">Follow</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="container">
+    <section class="resume-section p-lg-5" id="personal">
+      <div class="w-100">
+        <h2 class="mb-3"><%= user.username %></h2>
+        <div class="lead mb-5">
+          <h3>Contact:</h3>
+          <label>Email: </label>
+          <a href="#"><%= user.email %></a><br>
+          <label>Phone: </label>
+          <text><%= user.phone_number %></text><br>
         </div>
-      </section>
-  
-      <hr class="m-0">
-  
-      <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="Qualification">
-        <div class="w-100">
-				  <div>
-					  <h2>Education</h2>
-					  <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-						  <div class="resume-content">
-							  <p class="lead"><%= user.education %></p>
-						  </div>
-					  </div>
-          </div>
-          <div>
-            <h2 class="">Experience</h2>
-            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
-              <div class="resume-content">
-                <p class="lead"><%= user.experience %></p>				
-              </div>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="Qualification">
+      <div class="w-100">
+        <div>
+          <h2>Education</h2>
+          <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="resume-content">
+              <p class="lead"><%= user.education %></p>
             </div>
           </div>
         </div>
-      </section>
-  
-      <hr class="m-0">
-  
-      <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="follow">
-        <div class="w-100">
-          <h2 class="mb-5">Follow</h2>
-  
-          <div class="">
-            <% follow.forEach(function(item) { %>
-              <a href='/business/<%= item.followed_ID%>' class="lead"><%= item.username %></a><br>
-            <% }); %>
+        <div>
+          <h2 class="">Experience</h2>
+          <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
+            <div class="resume-content">
+              <p class="lead"><%= user.experience %></p>
+            </div>
           </div>
-  
         </div>
-      </section>
-  
-      <hr class="m-0">
+      </div>
+    </section>
 
-    </div>
-  
-  </body>
+    <% if(user_id  == id ){ %>
+    <hr class="m-0">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="follow">
+      <div class="w-100">
+        <h2 class="mb-5">Follow</h2>
+        <div class="">
+          <% follow.forEach(function(item) { %>
+          <a href='/business/<%= item.followed_ID%>' class="lead"><%= item.username %></a><br>
+          <% }); %>
+        </div>
+
+      </div>
+    </section>
+    <hr class="m-0">
+    <%};%>
+  </div>
+
+</body>
