update job applicant list

--- a/views/pages/business_profile.ejs
+++ b/views/pages/business_profile.ejs
@@ -62,7 +62,7 @@
               <h2 class="mb-5">Job Posted</h2>
               <% jobs.forEach(function(job) { %>
               <div class="">
-                  <a href='/job_des/<%= job.job_ID%>' class="lead"><%= job.job_title %></a><br>
+                  <a href='/applicant/<%= job.job_ID%>' class="lead"><%= job.job_title %></a><br>
               </div>
               <% }); %>
       
