changed style of button

--- a/views/pages/sign_up.ejs
+++ b/views/pages/sign_up.ejs
@@ -1,5 +1,13 @@
 <!-- <button href="/sign_up_employee" class="btn btn-primary">I'm Employee</button>
 <button href="/sign_up_employer" class="btn btn-primary">I'm Employer</button> -->
+<!-- button{
+    height:20px; 
+    width:100px; 
+    margin: -20px -50px; 
+    position:relative;
+    top:50%; 
+    left:50%;
+} -->
 
-<button onclick="window.location.href='/sign_up_employee'" class="btn btn-primary">I'm Employee</button>
-<button onclick="window.location.href='/sign_up_employer'" class="btn btn-primary">I'm Employer</button>
+<button style=" font-size: 20px; height: 100px; width: 400px; margin: 0 auto" onclick="window.location.href='/sign_up_employee'" class="btn btn-primary">I'm Employee</button>
+<button style=" font-size: 20px; height: 100px; width: 400px; margin: 0 auto" onclick="window.location.href='/sign_up_employer'" class="btn btn-primary">I'm Employer</button>
